; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_Scene_b.c_SceneAwaitInputPressed_b.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_Scene_b.c_SceneAwaitInputPressed_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scene_loaded = common dso_local global i32 0, align 4
@scene_input_ready = common dso_local global i32 0, align 4
@fade_running = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@joy = common dso_local global i32 0, align 4
@await_input = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SceneAwaitInputPressed_b() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @scene_loaded, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %13

4:                                                ; preds = %0
  %5 = load i32, i32* @scene_input_ready, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = call i32 @ACTOR_ON_TILE(i32 0)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i64, i64* @fade_running, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %7, %4, %0
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* %1, align 4
  br label %21

15:                                               ; preds = %10
  %16 = load i32, i32* @joy, align 4
  %17 = load i32, i32* @await_input, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i32
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %15, %13
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @ACTOR_ON_TILE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
